# CEDAvaliacao

./: CMakeLists.txt  Sections.txt
include/: cuda_complex.h  fft.h  timer.h
src/: fft.cpp  fft_gpu.cu  main.cpp
